--- a/cbti/cbt-hygiene-buruk.html
+++ b/cbti/cbt-hygiene-buruk.html
@@ -3,32 +3,43 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sleep Hygiene & Relaksasi</title>
+  <title>Sleep Hygiene &amp; Relaksasi</title>
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <div class="container">
-    <section>
-      <h2>Sleep Hygiene & Relaksasi</h2>
-      <p>
-        Jika tidur kurang berkualitas tanpa gangguan medis spesifik, penyebabnya sering dari pola hidup kurang sehat.
-      </p>
-      <ul>
-        <li>Matikan gadget 30 menit sebelum tidur.</li>
-        <li>Hindari kafein sore/malam.</li>
-        <li>Relaksasi (pernapasan, meditasi, musik tenang) sebelum tidur.</li>
-        <li>Kamar gelap, nyaman, suhu pas.</li>
-      </ul>
-      <h3>Referensi:</h3>
-      <ul>
-        <li>
-          <a href="https://www.sleepfoundation.org/sleep-hygiene" target="_blank">
-            Sleep Foundation – Sleep Hygiene
-          </a>
-        </li>
-      </ul>
-      <button class="btn-back" onclick="window.history.back()">Kembali</button>
-    </section>
-  </div>
+  <main>
+    <div class="container">
+      <section>
+        <!-- Judul dengan animasi underline -->
+        <h2 class="section-title">Sleep Hygiene &amp; Relaksasi</h2>
+
+        <!-- Konten utama -->
+        <div class="section-content">
+          <p>
+            Jika tidur kurang berkualitas tanpa gangguan medis spesifik, penyebabnya sering dari pola hidup kurang sehat.
+          </p>
+          <ul>
+            <li>Matikan gadget <strong>30 menit</strong> sebelum tidur.</li>
+            <li>Hindari <strong>kafein</strong> sore/malam.</li>
+            <li>Relaksasi (<em>pernapasan, meditasi, musik tenang</em>) sebelum tidur.</li>
+            <li>Kamar gelap, nyaman, suhu pas.</li>
+          </ul>
+        </div>
+
+        <!-- Referensi -->
+        <h3>Referensi:</h3>
+        <ul>
+          <li>
+            <a href="https://www.sleepfoundation.org/sleep-hygiene" target="_blank" rel="noopener">
+              Sleep Foundation – Sleep Hygiene
+            </a>
+          </li>
+        </ul>
+
+        <!-- Tombol kembali bergaya -->
+        <button class="btn-back" onclick="window.history.back()">Kembali</button>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
