--- a/cbti/cbt-hypersomnia.html
+++ b/cbti/cbt-hypersomnia.html
@@ -7,28 +7,35 @@
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <div class="container">
-    <section>
-      <h2>CBTI untuk Hypersomnia</h2>
-      <p>
-        Hypersomnia = tidur berlebihan (&gt;9 jam/hari) tapi tetap merasa ngantuk dan kualitas tidur rendah.
-      </p>
-      <ul>
-        <li>Evaluasi ulang jadwal tidur agar tidak terlalu lama di kasur.</li>
-        <li>Fokus aktivitas pagi (olahraga ringan, mandi pagi).</li>
-        <li>Batasi tidur siang max 20–30 menit.</li>
-        <li>Jika tetap ngantuk, konsultasi ke dokter untuk evaluasi sleep disorder lain.</li>
-      </ul>
-      <h3>Referensi:</h3>
-      <ul>
-        <li>
-          <a href="https://www.sleepfoundation.org/hypersomnia" target="_blank">
-            Sleep Foundation – Hypersomnia
-          </a>
-        </li>
-      </ul>
-      <button class="btn-back" onclick="window.history.back()">Kembali</button>
-    </section>
-  </div>
+  <main>
+    <div class="container">
+      <section>
+        <h2 class="section-title">CBTI untuk Hypersomnia</h2>
+
+        <div class="section-content">
+          <p>
+            Hypersomnia = tidur berlebihan (&gt;9 jam/hari) tapi tetap merasa ngantuk dan kualitas tidur rendah.
+          </p>
+          <ul>
+            <li>Evaluasi ulang jadwal tidur agar tidak terlalu lama di kasur.</li>
+            <li>Fokus aktivitas pagi (olahraga ringan, mandi pagi).</li>
+            <li>Batasi tidur siang max 20–30 menit.</li>
+            <li>Jika tetap ngantuk, konsultasi ke dokter untuk evaluasi sleep disorder lain.</li>
+          </ul>
+        </div>
+
+        <h3>Referensi:</h3>
+        <ul>
+          <li>
+            <a href="https://www.sleepfoundation.org/hypersomnia" target="_blank" rel="noopener">
+              Sleep Foundation – Hypersomnia
+            </a>
+          </li>
+        </ul>
+
+        <button class="btn-back" onclick="window.history.back()">Kembali</button>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
