--- a/cbti/cbt-insomnia-kognitif.html
+++ b/cbti/cbt-insomnia-kognitif.html
@@ -7,38 +7,48 @@
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <div class="container">
-    <section>
-      <h2>CBTI Kognitif untuk Insomnia</h2>
-      <p>
-        Sebagian insomnia disebabkan oleh <b>pikiran negatif, kecemasan, atau persepsi salah tentang tidur</b> (misal: "Saya selalu gagal tidur padahal sudah cukup lama di kasur").
-      </p>
-      <h3>Penjelasan Ilmiah</h3>
-      <p>
-        CBTI menekankan <b>cognitive restructuring</b>: mengenali dan mengubah pikiran tidak rasional tentang tidur.<br />
-        Studi menunjukkan perubahan cara pikir dapat meningkatkan kualitas tidur meski durasi tidak berubah banyak.
-      </p>
-      <h3>Teknik Utama</h3>
-      <ol>
-        <li>Buat catatan tidur untuk bedakan persepsi dan realita.</li>
-        <li>Identifikasi self‑talk negatif dan ubah jadi afirmasi netral.</li>
-        <li>Latihan mindfulness sebelum tidur.</li>
-      </ol>
-      <h3>Referensi:</h3>
-      <ul>
-        <li>
-          <a href="https://www.sleepfoundation.org/insomnia/treatment/cognitive-behavioral-therapy-for-insomnia" target="_blank">
-            Sleep Foundation – CBTI
-          </a>
-        </li>
-        <li>
-          <a href="https://pubmed.ncbi.nlm.nih.gov/21135515/" target="_blank">
-            Harvey AG, 2011
-          </a>
-        </li>
-      </ul>
-      <button class="btn-back" onclick="window.history.back()">Kembali</button>
-    </section>
-  </div>
+  <main>
+    <div class="container">
+      <section>
+        <h2 class="section-title">CBTI Kognitif untuk Insomnia</h2>
+
+        <div class="section-content">
+          <p>
+            Sebagian insomnia disebabkan oleh <strong>pikiran negatif, kecemasan, atau persepsi salah tentang tidur</strong>
+            (misalnya: <em>"Saya selalu gagal tidur padahal sudah cukup lama di kasur"</em>).
+          </p>
+
+          <h3>Penjelasan Ilmiah</h3>
+          <p>
+            CBTI menekankan <strong>cognitive restructuring</strong>: mengenali dan mengubah pikiran tidak rasional tentang tidur.<br />
+            Studi menunjukkan perubahan cara pikir dapat meningkatkan kualitas tidur meskipun durasi tidak berubah banyak.
+          </p>
+
+          <h3>Teknik Utama</h3>
+          <ol>
+            <li>Buat catatan tidur untuk membedakan persepsi dan realita.</li>
+            <li>Identifikasi self-talk negatif dan ubah menjadi afirmasi netral.</li>
+            <li>Lakukan latihan mindfulness sebelum tidur.</li>
+          </ol>
+        </div>
+
+        <h3>Referensi:</h3>
+        <ul>
+          <li>
+            <a href="https://www.sleepfoundation.org/insomnia/treatment/cognitive-behavioral-therapy-for-insomnia" target="_blank" rel="noopener">
+              Sleep Foundation – CBTI
+            </a>
+          </li>
+          <li>
+            <a href="https://pubmed.ncbi.nlm.nih.gov/21135515/" target="_blank" rel="noopener">
+              Harvey AG, 2011
+            </a>
+          </li>
+        </ul>
+
+        <button class="btn-back" onclick="window.history.back()">Kembali</button>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
