--- a/cbti/cbt-insomnia-sleeprestriction.html
+++ b/cbti/cbt-insomnia-sleeprestriction.html
@@ -7,32 +7,41 @@
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <div class="container">
-    <section>
-      <h2>CBTI Sleep Restriction untuk Insomnia</h2>
-      <p>
-        Teknik <b>sleep restriction</b> membatasi waktu di kasur agar tubuh belajar tidur lebih efisien, bukan cuma rebahan lama tanpa tidur.
-      </p>
-      <h3>Penjelasan Ilmiah</h3>
-      <p>
-        Membatasi waktu tidur sesuai waktu tidur nyata akan meningkatkan tekanan tidur sehingga tidur lebih nyenyak. Jika efisiensi &gt;85%, waktu tidur boleh ditambah sedikit demi sedikit.
-      </p>
-      <h3>Langkah:</h3>
-      <ol>
-        <li>Catat waktu tidur nyata setiap malam selama 1 minggu.</li>
-        <li>Atur jam tidur‑bangun ketat (misal hanya 6 jam jika tidur efektif 6 jam).</li>
-        <li>Tambah 15–30 menit waktu tidur tiap minggu jika efisiensi membaik.</li>
-      </ol>
-      <h3>Referensi:</h3>
-      <ul>
-        <li>
-          <a href="https://www.sleepfoundation.org/insomnia/treatment/cognitive-behavioral-therapy-for-insomnia" target="_blank">
-            Sleep Foundation – CBTI
-          </a>
-        </li>
-      </ul>
-      <button class="btn-back" onclick="window.history.back()">Kembali</button>
-    </section>
-  </div>
+  <main>
+    <div class="container">
+      <section>
+        <h2 class="section-title">CBTI Sleep Restriction untuk Insomnia</h2>
+
+        <div class="section-content">
+          <p>
+            Teknik <strong>sleep restriction</strong> membatasi waktu di kasur agar tubuh belajar tidur lebih efisien, bukan hanya rebahan lama tanpa tidur.
+          </p>
+
+          <h3>Penjelasan Ilmiah</h3>
+          <p>
+            Membatasi waktu tidur sesuai waktu tidur nyata akan meningkatkan tekanan tidur sehingga tidur lebih nyenyak. Jika efisiensi &gt;85%, waktu tidur boleh ditambah sedikit demi sedikit.
+          </p>
+
+          <h3>Langkah:</h3>
+          <ol>
+            <li>Catat waktu tidur nyata setiap malam selama 1 minggu.</li>
+            <li>Atur jam tidur‑bangun ketat (misal hanya 6 jam jika tidur efektif 6 jam).</li>
+            <li>Tambah 15–30 menit waktu tidur tiap minggu jika efisiensi membaik.</li>
+          </ol>
+        </div>
+
+        <h3>Referensi:</h3>
+        <ul>
+          <li>
+            <a href="https://www.sleepfoundation.org/insomnia/treatment/cognitive-behavioral-therapy-for-insomnia" target="_blank" rel="noopener">
+              Sleep Foundation – CBTI
+            </a>
+          </li>
+        </ul>
+
+        <button class="btn-back" onclick="window.history.back()">Kembali</button>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
