--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div class="fitur-title">Fitur SleepWell AI</div>
   <div class="grid fitur-grid">
     <div class="fitur-card">
-      <img src="https://img.icons8.com/color/96/smart-watch.png"/>
+      <img src="https://cdn-icons-png.flaticon.com/512/2042/2042286.png"/>
       <h3>Analisis Tidur Otomatis</h3>
       <p>Input data harian, SleepWell otomatis menganalisis durasi, kualitas, & gangguan tidur Anda.</p>
     </div>
