--- a/cbti/cbt-pemeliharaan.html
+++ b/cbti/cbt-pemeliharaan.html
@@ -7,25 +7,32 @@
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <div class="container">
-    <section>
-      <h2>Pemeliharaan Kebiasaan Tidur Baik</h2>
-      <ul>
-        <li>Tidur‑bangun jam yang sama tiap hari.</li>
-        <li>Rutin olahraga ringan.</li>
-        <li>Jangan makan berat mendekati waktu tidur.</li>
-        <li>Jika stres, gunakan relaksasi sebelum tidur.</li>
-      </ul>
-      <h3>Referensi:</h3>
-      <ul>
-        <li>
-          <a href="https://www.sleepfoundation.org/sleep-hygiene" target="_blank">
-            Sleep Foundation – Sleep Hygiene
-          </a>
-        </li>
-      </ul>
-      <button class="btn-back" onclick="window.history.back()">Kembali</button>
-    </section>
-  </div>
+  <main>
+    <div class="container">
+      <section>
+        <h2 class="section-title">Pemeliharaan Kebiasaan Tidur Baik</h2>
+
+        <div class="section-content">
+          <ul>
+            <li>Tidur‑bangun jam yang sama tiap hari.</li>
+            <li>Rutin olahraga ringan.</li>
+            <li>Jangan makan berat mendekati waktu tidur.</li>
+            <li>Jika stres, gunakan relaksasi sebelum tidur.</li>
+          </ul>
+        </div>
+
+        <h3>Referensi:</h3>
+        <ul>
+          <li>
+            <a href="https://www.sleepfoundation.org/sleep-hygiene" target="_blank" rel="noopener">
+              Sleep Foundation – Sleep Hygiene
+            </a>
+          </li>
+        </ul>
+
+        <button class="btn-back" onclick="window.history.back()">Kembali</button>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
