--- a/cbti/cbt-tidurpendek.html
+++ b/cbti/cbt-tidurpendek.html
@@ -7,27 +7,34 @@
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <div class="container">
-    <section>
-      <h2>Tips Menambah Durasi Tidur</h2>
-      <p>
-        Jika kualitas tidur baik, tapi durasi masih kurang, lakukan penyesuaian perlahan.
-      </p>
-      <ul>
-        <li>Tambah waktu tidur 15–30 menit lebih awal setiap minggu.</li>
-        <li>Atur aktivitas malam agar selesai lebih awal.</li>
-        <li>Jangan tidur siang terlalu lama.</li>
-      </ul>
-      <h3>Referensi:</h3>
-      <ul>
-        <li>
-          <a href="https://www.sleepfoundation.org/how-sleep-works/how-much-sleep-do-we-really-need" target="_blank">
-            Sleep Foundation – How Much Sleep?
-          </a>
-        </li>
-      </ul>
-      <button class="btn-back" onclick="window.history.back()">Kembali</button>
-    </section>
-  </div>
+  <main>
+    <div class="container">
+      <section>
+        <h2 class="section-title">Tips Menambah Durasi Tidur</h2>
+
+        <div class="section-content">
+          <p>
+            Jika kualitas tidur baik, tapi durasi masih kurang, lakukan penyesuaian secara perlahan.
+          </p>
+          <ul>
+            <li>Tambah waktu tidur 15–30 menit lebih awal setiap minggu.</li>
+            <li>Atur aktivitas malam agar selesai lebih awal.</li>
+            <li>Jangan tidur siang terlalu lama.</li>
+          </ul>
+        </div>
+
+        <h3>Referensi:</h3>
+        <ul>
+          <li>
+            <a href="https://www.sleepfoundation.org/how-sleep-works/how-much-sleep-do-we-really-need" target="_blank" rel="noopener">
+              Sleep Foundation – How Much Sleep?
+            </a>
+          </li>
+        </ul>
+
+        <button class="btn-back" onclick="window.history.back()">Kembali</button>
+      </section>
+    </div>
+  </main>
 </body>
 </html>
