--- a/hasil-prediksi.html
+++ b/hasil-prediksi.html
@@ -4,7 +4,7 @@
   <title>Hasil Prediksi Tidur Anda • SleepWell AI</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" href="asset/img/logo-sinyal-tenang.png" />
+  <link rel="icon" src="asset/img/logo-sinyal-tenang.png" />
   <style>
     :root {
       --primary: #6751ef;
