--- a/hasil-prediksi.html
+++ b/hasil-prediksi.html
@@ -4,7 +4,7 @@
   <title>Hasil Prediksi Tidur Anda • SleepWell AI</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" src="asset/img/logo-sinyal-tenang.png" />
+  <link rel="icon" href="style/img/logo-sinyal-tenang.png" />
   <style>
     :root {
       --primary: #6751ef;
@@ -184,7 +184,7 @@
 <body>
   <div class="main-wrapper">
     <div class="logo">
-      <img src="img/logo-sinyal-tenang.png" alt="Logo SleepWell"/>
+      <img src="style/img/logo-sinyal-tenang.png" alt="Logo SleepWell"/>
       <span>SleepWell <span style="color:var(--blue)">AI</span></span>
     </div>
     <h2>Hasil Prediksi Tidur Anda</h2>
