Fix HTML encoding issues in form-input.html

--- a/form-input.html
+++ b/form-input.html
@@ -44,9 +44,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
-    // Setup Supabase
-    const supabaseUrl = 'https://vnbqtnhcxlhygfajoulf.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZuYnF0bmhjeGxoeWdmYWpvdWxmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDk3MjEwOTQsImV4cCI6MjA2NTI5NzA5NH0.iFEHsnjgufQuZ6kcaH1gtNT9qyNFfCu8JuxW_clgKRc';
+    const supabaseUrl = 'https://whszzlmewqonddsrumuy.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Indoc3p6bG1ld3FvbmRkc3J1bXV5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQxOTMyMDQsImV4cCI6MjA3OTc2OTIwNH0.1sf5B9s90lV5PHnxePelbcSC_fvhAq1LNj45SV36evo';
     const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
     let userProfile = {};
@@ -341,3 +340,4 @@
   </style>
 </body>
 </html>
+
