--- a/login-user.html
+++ b/login-user.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>Login • SleepWell AI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Jika pakai file eksternal, hapus <style> di bawah dan gunakan <link rel="stylesheet" href="style-login.css"> -->
 </head>
 <body>
   <div class="login-container">
     <div class="login-card">
       <img src="style/img/logo-sinyal-tenang.png" alt="SleepWell Logo" class="logo">
       <h2 class="title">Login SleepWell</h2>
+
       <form id="loginForm" autocomplete="off">
         <div class="form-group">
           <label>Email</label>
@@ -22,37 +22,67 @@
         </div>
         <button type="submit" class="btn-login">Login</button>
       </form>
+
       <div id="loginMsg" class="login-msg"></div>
       <p class="redirect">Belum punya akun? <a href="sign-up.html">Daftar di sini</a></p>
     </div>
   </div>
+
+  <!-- Supabase JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
+    // GUNAKAN PROJECT SUPABASE PUNYAMU
     const supabaseUrl = 'https://whszzlmewqonddsrumuy.supabase.co';
     const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Indoc3p6bG1ld3FvbmRkc3J1bXV5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQxOTMyMDQsImV4cCI6MjA3OTc2OTIwNH0.1sf5B9s90lV5PHnxePelbcSC_fvhAq1LNj45SV36evo';
     const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-    document.getElementById("loginForm").onsubmit = async function(e) {
+    // Debug kecil supaya kelihatan di console kalau Supabase kebaca
+    console.log("Supabase URL:", supabaseUrl);
+
+    document.getElementById("loginForm").onsubmit = async function (e) {
       e.preventDefault();
       const fd = new FormData(this);
       const email = fd.get("email");
       const password = fd.get("password");
 
-      const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+      document.getElementById("loginMsg").innerText = "Memproses...";
+      document.getElementById("loginMsg").style.color = "#374151";
 
-      if (error) {
-        document.getElementById("loginMsg").innerText = "Email atau password salah!";
-        document.getElementById("loginMsg").style.color = "#e11d48";
-      } else if (!data.user.email_confirmed_at) {
-        document.getElementById("loginMsg").innerText = "Email belum diverifikasi! Silakan cek inbox email kamu.";
-        document.getElementById("loginMsg").style.color = "#e11d48";
-      } else {
+      try {
+        const { data, error } = await supabase.auth.signInWithPassword({ email, password });
+
+        if (error) {
+          console.error(error);
+          document.getElementById("loginMsg").innerText = "Email atau password salah!";
+          document.getElementById("loginMsg").style.color = "#e11d48";
+          return;
+        }
+
+        // Kalau kamu masih pakai verifikasi email, cek ini.
+        if (data.user && !data.user.email_confirmed_at) {
+          document.getElementById("loginMsg").innerText =
+            "Email belum diverifikasi! Silakan cek inbox email kamu.";
+          document.getElementById("loginMsg").style.color = "#e11d48";
+          return;
+        }
+
+        // Simpan user_id ke sessionStorage
         sessionStorage.setItem("user_id", data.user.id);
+        document.getElementById("loginMsg").innerText = "Login berhasil, mengalihkan...";
+        document.getElementById("loginMsg").style.color = "#16a34a";
+
+        // Arahkan ke main menu / halaman berikutnya
         window.location.href = "main-menu.html";
+      } catch (err) {
+        console.error(err);
+        document.getElementById("loginMsg").innerText =
+          "Terjadi kesalahan saat login. Coba lagi nanti.";
+        document.getElementById("loginMsg").style.color = "#e11d48";
       }
     };
   </script>
-  <!-- CSS di bawah, jika ingin eksternal silakan pindahkan ke file style-login.css -->
+
+  <!-- CSS -->
   <style>
     :root {
       --primary: #6751ef;
@@ -187,4 +217,3 @@
   </style>
 </body>
 </html>
-
